# ephemeris

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  docker-compose.dev.yml  docker-compose.test.yml  ephemeris-arango.toml  ephemeris.toml  test-app.ps1
.github/workflows/: ci.yml
crates/ephemeris-api/: Cargo.toml
crates/ephemeris-api/src/: lib.rs  state.rs
crates/ephemeris-api/src/routes/: events.rs  health.rs  hierarchy.rs  mod.rs  pools.rs  serial_numbers.rs
crates/ephemeris-app/: Cargo.toml
crates/ephemeris-app/src/: config.rs  main.rs
crates/ephemeris-app/tests/: e2e_pipeline.rs
crates/ephemeris-arango/: Cargo.toml
crates/ephemeris-arango/src/: aggregation_repo.rs  client.rs  lib.rs
crates/ephemeris-core/: Cargo.toml
crates/ephemeris-core/src/: error.rs
crates/ephemeris-core/src/domain/: aggregation.rs  epc.rs  event.rs  mod.rs  pool.rs  query.rs  serial_number.rs
crates/ephemeris-core/src/repository/: aggregation.rs  esm.rs  event.rs  mod.rs  pool.rs  serial_number.rs
crates/ephemeris-core/src/service/: mod.rs  noop_esm.rs  pool.rs  serial_number.rs
crates/ephemeris-mqtt/: Cargo.toml
crates/ephemeris-mqtt/src/: handler.rs  lib.rs  subscriber.rs
crates/ephemeris-pg/: Cargo.toml
crates/ephemeris-pg/src/: aggregation_repo.rs  event_repo.rs  lib.rs  pool_repo.rs  schema.rs  serial_number_repo.rs
crates/ephemeris-testkit/: Cargo.toml
crates/ephemeris-testkit/src/: dashboard.rs  event_generator.rs  lib.rs  mqtt_publisher.rs
crates/ephemeris-testkit/static/: index.html
docs/: open-scs-alignment.md
docs/plans/: 2026-03-01-ephemeris-architecture-design.md  2026-03-01-ephemeris-mvp-implementation.md  2026-03-01-sn-lifecycle-design.md  2026-03-01-sn-lifecycle-implementation.md  2026-03-03-pool-management-design.md  2026-03-03-pool-management-implementation.md
tasks/: decisions-pending.md  progress.md
tests/fixtures/: aggregation_event.json  object_event.json
