[workspace]
resolver = "2"
members = [
    "crates/ephemeris-core",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/saturnis-io/ephemeris"

[workspace.dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trait-variant = "0.1"

# Async
tokio = { version = "1", features = ["full"] }

# Database - Tier 1
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }

# Database - Tier 2 (Enterprise)
reqwest = { version = "0.13", features = ["json"] }

# MQTT
rumqttc = "0.25"

# API
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Config
config = { version = "0.15", features = ["toml"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"

# Testing
mockall = "0.14"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
