[package]
name = "ephemeris-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ephemeris-core = { path = "../ephemeris-core" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
mockall = { workspace = true }
