[package]
name = "ephemeris-pg"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ephemeris-core = { path = "../ephemeris-core" }
tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
